--- a/Index.html
+++ b/Index.html
@@ -93,3 +93,99 @@
                 </div>
                 <!-- Destinasi 7 -->
                 <div class="destinasi-item">
+                    <img src="images/museum wr soepratman.jpg" alt="Museum W.R Soepratman">
+                    <h3>Museum W.R Soepratman</h3>
+                    <p>Bangunan museum ini awalnya adalah rumah milik kakak pertama W.R Soepratman berada di Jl. Mangga No.21, Gedang Sewu, Surabaya. Soepratman tinggal di rumah tersebut pada tahun 1937, hingga akhirnya meninggal dunia pada 17 Agustus 1938 Pada 1936 dan untuk bersembunyi dari kejaran pasukan Belanda. Di dalam museum berisi koleksi barang yang berkaitan dengan W.R Soepratman. Yang paling ikonik dari museum ini adalah Patung W.R Soepratman berpose memainkan biola yang ada di depan museum juga ada lemari berisi replika biola milik Sang Maestro. Ada banyak spot foto menarik di tempat ini dengan nuansa vintage atau zaman dulu.</p>
+                    <p class="rating">Rating: ⭐⭐⭐⭐⭐ (4.8)</p>
+                    <a href="https://maps.app.goo.gl/m8kQUCQ7cqJyZfq9A" target="_blank" class="btn location-link">Lihat di Google Maps</a>
+                    <a href="https://tiketwisata.surabaya.go.id/" target="_blank" class="btn">Beli Tiket</a>
+                </div>
+                <!-- Destinasi 8 -->
+                <div class="destinasi-item">
+                    <img src="images/museum olahraga.jpg" alt="Museum Olahraga">
+                    <h3>Museum Olahraga</h3>
+                    <p>Museum Olahraga diresmikan pada tanggal 8 Mei 2021. Dibangun untuk menggambarkan dinamika sejarah dan budaya bangsa Indonesia terkait cerita sejarah olahraga serta benda dan bukti materiil peninggalan para Pejuang dan Pahlawan Olahraga yang ada Surabaya. Museum ini menyimpan koleksi para atlet Surabaya. Ratusan koleksi terbagi menjadi tiga jenis yaitu koleksi historika (koleksi yang diperoleh dari hasil temuan, hasil escavasi ataupun bukti materil bersejarah), koleksi heraldika (tanda penghargaan ataupun jasa, kepangkatan, lambang atau logo), dan koleksi teknologika terkait benda dengan unsur teknologi. Museum ini didirikan sebagai penghormatan atas jasa prestasi para atlet .</p>
+                    <p class="rating">Rating: ⭐⭐⭐⭐☆ (4.7)</p>
+                    <a href="https://maps.app.goo.gl/r2GhYe9jmddyfoK47" target="_blank" class="btn location-link">Lihat di Google Maps</a>
+                    <a href="https://tiketwisata.surabaya.go.id/" target="_blank" class="btn">Beli Tiket</a>
+                </div>
+                <!-- Destinasi 9 -->
+                <div class="destinasi-item">
+                    <img src="images/sungai-kalimas-surabaya-1.jpeg" alt="Wisata Perahu Kalimas">
+                    <h3>Wisata Perahu Kalimas</h3>
+                    <p>Wisata Kalimas pada dasarnya adalah sebuah objek wisata yang menghadirkan perjalanan menelusuri daerah Surabaya dengan sebuah perahu. Objek wisata ini kemudian banyak masyarakat kenal sebagai wisata Perahu Kalimas. Objek wisata ini telah resmi beroperasi sejak pengesahannya di Hari Ulang Tahun Kota Surabaya yang ke-729. Wali Kota Surabaya, Eri Cahyadi, menegaskan bahwa dengan disahkannya objek wisata Kalimas, maka objek wisata Kalimas yang dulunya tidak terawat kini telah sepenuhnya dikembangkan dan dibuka untuk umum. Wisata perahu Kalimas sendiri adalah wisata menyusuri kota dengan sebuah perahu dan mengikuti rute sungai.</p>
+                    <p class="rating">Rating: ⭐⭐⭐⭐☆ (4.1)</p>
+                    <a href="https://maps.app.goo.gl/WMGqD4bJQ6KPYFmF8" target="_blank" class="btn location-link">Lihat di Google Maps</a>
+                    <a href="https://tiketwisata.surabaya.go.id/" target="_blank" class="btn">Beli Tiket</a>
+                </div>
+                <!-- Destinasi 10 -->
+                <div class="destinasi-item">
+                    <img src="images/Tugu_Pahlawan_Surabaya.jpg" alt="Monumen Tugu Pahlawan">
+                    <h3>Monumen Tugu Pahlawan</h3>
+                    <p>Monumen Tugu Pahlawan dibangun untuk mengenang sejarah perjuangan Pahlawan Kemerdekaan Bangsa Indonesia dalam peristiwa pertempuran 10 Nopember 1945 di Surabaya. Bangunan monumen dibangun dengan bentuk menyerupai "paku terbalik" setinggi 45-yard atau 40,50 meter. Untuk melengkapi monumen, dibangunlah fasilitas sejarah yaitu Museum 10 Nopember yang di dalamnya terdapat ratusan koleksi seperti koleksi foto, senjata rampasan dan artefak peninggalan pertempuran di Surabaya dan fasilitas pendukung lain yaitu diorama elekronik dan diorama statis.</p>
+                    <p class="rating">Rating: ⭐⭐⭐⭐☆ (4.7)</p>
+                    <a href="https://maps.app.goo.gl/kVgJk9daTXYmMfEv6" target="_blank" class="btn location-link">Lihat di Google Maps</a>
+                    <a href="https://tiketwisata.surabaya.go.id/" target="_blank" class="btn">Beli Tiket</a>
+                </div>
+                <!-- Destinasi 11 -->
+                <div class="destinasi-item">
+                    <img src="images/jamboree-playlandkhusus-anak_1726801149.jpeg" alt="Jamboree Playland">
+                    <h3>Jamboree Playland</h3>
+                    <p>Jamboree Playland merupakan tempat hiburan baru di Kota Surabaya yang cocok untuk dijadikan destinasi berlibur bersama anak dan keluarga. Adapun fasilitas yang tersedia antara lain Kolam renang Dewasa dengan kedalaman 125 cm, kolam renang anak-anak dengan ukuran 30 cm dan 50 cm, Taman Sensorik, toilet dan ruang ganti untuk pria, wanita dan disabilitas. Wali Kota Surabaya, Eri Cahyadi, meresmikan Kolam Renang Jambangan Hore (Jambore) Playland, di Jalan Ketintang Madya VII Surabaya. Jambore Playland ini merupakan salah satu, komitmen Pemkot Surabaya.</p>
+                    <p class="rating">Rating: ⭐⭐⭐⭐☆ (4.1)</p>
+                    <a href="https://maps.app.goo.gl/iiG2eTV31oLQM1re8" target="_blank" class="btn location-link">Lihat di Google Maps</a>
+                    <a href="https://tiketwisata.surabaya.go.id/" target="_blank" class="btn">Beli Tiket</a>
+                </div>
+                <!-- Destinasi 11 -->
+                <div class="destinasi-item">
+                    <img src="images/suramadu.jpg" alt="Jembatan Suramadu">
+                    <h3>Jembatan Suramadu</h3>
+                    <p>embatan Nasional Suramadu, atau Jembatan Suramadu (Suramadu merupakan singkatan dari Surabaya Madura), adalah sebuah jembatan yang melintasi Selat Madura, menghubungkan Pulau Jawa (di Surabaya) dan Pulau Madura (di Bangkalan, tepatnya timur Kamal), Indonesia. Dengan panjang 5.438 m, jembatan ini merupakan jembatan terpanjang di Indonesia. Jembatan Suramadu terdiri dari tiga bagian yaitu jalan layang, jembatan penghubung, dan jembatan utama. Jalan yang melintasi jembatan ini sebelumnya merupakan jalan tol sejak peresmiannya pada Juni 2009 hingga Oktober 2018.</p>
+                    <p class="rating">Rating: ⭐⭐⭐⭐☆ (4.3)</p>
+                    <a href="https://maps.app.goo.gl/KUG5g4oVKW2fePM5A?g_st=iw" target="_blank" class="btn location-link">Lihat di Google Maps</a>
+                    <a href="https://tiketwisata.surabaya.go.id/" target="_blank" class="btn">Beli Tiket</a>
+                </div>
+                <!-- Destinasi 12 -->
+                <div class="destinasi-item">
+                    <img src="images/kbs.jpeg" alt="Kebun Binatang Surabaya">
+                    <h3>Kebun Binatang Surabaya</h3>
+                    <p>Kebun Binatang Surabaya, disingkat KBS adalah salah satu kebun binatang yang populer di Indonesia dan terletak di Surabaya. KBS merupakan kebun binatang yang pernah terlengkap se-Asia Tenggara, di dalamnya terdapat lebih dari 230 spesies satwa yang berbeda yang terdiri lebih dari 2179 ekor satwa. Termasuk di dalamnya satwa langka Indonesia maupun dunia terdiri dari Mamalia, Aves, Reptilia, dan Pisces.</p>
+                    <p class="rating">Rating: ⭐⭐⭐⭐☆ (4.8)</p>
+                    <a href="https://maps.app.goo.gl/a4GKcGbMHeiqjuRY7?g_st=iw" target="_blank" class="btn location-link">Lihat di Google Maps</a>
+                    <a href="https://tiketwisata.surabaya.go.id/" target="_blank" class="btn">Beli Tiket</a>
+                </div>
+                <!-- Destinasi 13 -->
+                <div class="destinasi-item">
+                    <img src="images/monkasel.jpg" alt="Monumen Kapal Selam">
+                    <h3>Monumen Kapal Selam</h3>
+                    <p>Monumen Kapal Selam, atau disingkat Monkasel, adalah sebuah museum kapal selam yang terdapat di Embong Kaliasin, Genteng, Surabaya. Terletak 333 di pusat kota yaitu di Jalan Pemuda, tepat di sebelah Plaza Surabaya, dan terdapat pintu akses untuk mengakses mal dari dalam monumen. Wisatawan dapat mengunjungi Monkasel sesuai jam operasional berlaku mulai pukul 08.00 WIB hingga 21.00 WIB.</p>
+                    <p class="rating">Rating: ⭐⭐⭐⭐☆ (4.3)</p>
+                    <a href="https://maps.app.goo.gl/EdtMdJLXcmSNJ79q6?g_st=iw" target="_blank" class="btn location-link">Lihat di Google Maps</a>
+                    <a href="https://tiketwisata.surabaya.go.id/" target="_blank" class="btn">Beli Tiket</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Tentang Kami Section -->
+    <section id="visimisi" class="visimisi">
+        <div class="container">
+            <h2>Visi & Misi</h2>
+            <h3>VISI : </h3>
+            <p>Menjadi platform digital yang berguna untuk memudahkan mahasiswa rantau di Surabaya dalam beradaptasi, menikmati, menjelajah keindahan Kota Surabaya, serta menciptakan pengalaman kuliah yang lebih nyaman dan berkesan.</p>
+            <h3>MISI : </h3>
+            <ul>
+                <li>Menyediakan informasi lengkap dan akurat tentang tempat wisata di Surabaya yang relevan bagi mahasiswa.</li>
+                <li>Mempermudah proses pemesanan tiket dan akses ke destinasi wisata di Kota Surabaya dilengkapi dengan panduan yang mudah untuk diikuti.</li>
+                <li>Membantu mahasiswa rantau dalam beradaptasi dengan budaya dan lingkungan lokal melalui konten informatif yang menarik dan bermanfaat.</li>
+                <li>Mendorong eksplorasi Surabaya dengan cara yang aman, nyaman, dan ramah lingkungan, serta mempromosikan wisata lokal kepada generasi muda agar lebih dalam mengenal Kota Surabaya.</li>
+            </ul>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 SuroboyoTrip. Semua Hak Cipta Dilindungi.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
